[package]
name = "beeswax-rs"
version = "0.1.0"
authors = ["Daniel Mason <daniel.mason@triptease.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2", features = ["full"] }
